Add document <head> skeleton

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Peace of Cake Studio</title>
+    <title>Peace of Cake Studio &bullet; Cake Design &amp; Events</title>
 
-    <style type="text/css">
-        html,
-        body {
-            margin: 0;
-        }
+    <!--<meta name="description" content="This is an example of a meta description. This will often show up in search results.">-->
+    <meta name="robots" content="index,follow">
 
-        body {
-            display: flex;
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#c9fbff">
 
-            justify-content: center;
-            align-items: center;
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-            min-height: 100vh;
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+          integrity="sha384-7tIwW4quYS2+TZCwuAPnUY+dRqg28ylzlIoVXAwpfiTs+CMKsAOSsWYQ96c/ZnV+"
+          crossorigin="anonymous">
 
-            color: #333333;
-
-            font: 3em sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style/studio.css">
 </head>
+
 <body>
-    <div>PEACEOFCAKESTUDIO.COM</div>
 </body>
+
 </html>
