--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
-    <title>Peace of Cake Studio &bullet; Cake Design &amp; Events</title>
+        <!--<meta name="description" content="This is an example of a meta description. This will often show up in search results.">-->
 
-    <!--<meta name="description" content="This is an example of a meta description. This will often show up in search results.">-->
-    <meta name="robots" content="index,follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#c9fbff">
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="theme-color" content="#c9fbff">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+              integrity="sha384-7tIwW4quYS2+TZCwuAPnUY+dRqg28ylzlIoVXAwpfiTs+CMKsAOSsWYQ96c/ZnV+"
+              crossorigin="anonymous">
 
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
-          integrity="sha384-7tIwW4quYS2+TZCwuAPnUY+dRqg28ylzlIoVXAwpfiTs+CMKsAOSsWYQ96c/ZnV+"
-          crossorigin="anonymous">
+        <link rel="stylesheet" href="style/studio.css">
+        <link rel="stylesheet" href="style/fonts.css">
 
-    <link rel="stylesheet" href="style/studio.css">
-</head>
-
-<body>
-    <div id="background"></div>
-</body>
-
+        <title>Peace of Cake Studio &bullet; Cake Design &amp; Events</title>
+    </head>
+    <body>
+        <div id="background"></div>
+    </body>
 </html>
