--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
-        <!--<meta name="description" content="This is an example of a meta description. This will often show up in search results.">-->
+        <meta name="description"
+              content="It's Peace of Cake to make that special day even sweeter with our cakes, cookies, cake pops and other delicious homemade pastries.">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#c9fbff">
@@ -20,7 +21,7 @@
         <link rel="stylesheet" href="style/studio.css">
         <link rel="stylesheet" href="style/fonts.css">
 
-        <title>Peace of Cake Studio &bullet; Cake Design &amp; Events</title>
+        <title>Cake Design, Event Planning &amp; Party Shop &bullet; Peace of Cake Studio</title>
     </head>
     <body>
         <div id="background"></div>
