Add full site content

--- a/index.html
+++ b/index.html
@@ -25,8 +25,38 @@
     </head>
     <body>
         <div id="background"></div>
-        <div id="studio">
 
+        <div id="studio">
+            <header>
+                <picture>
+                    <source media="(orientation: portrait)" srcset="images/logo_narrow.svg">
+                    <img src="images/logo_wide.svg" alt="Peace of Cake Studio Logo">
+                </picture>
+            </header>
+            <main>We are getting ready to party!</main>
+            <footer>
+                <div id="social-links">
+                    <a class="social-icon icon-facebook"
+                       href="https://www.facebook.com/pg/itspeaceofcake/home/"
+                       target="_blank"></a>
+                    <a class="social-icon icon-instagram"
+                       href="https://www.instagram.com/_u/peaceofcakedesign/"
+                       target="_blank"></a>
+                    <a class="social-icon icon-mail"
+                       href="mailto:hello@peaceofcakestudio.com"
+                       target="_blank"></a>
+                    <a class="social-icon icon-telephone"
+                       href="tel:223164793" ></a>
+                    <a class="social-icon icon-location"
+                       href="https://www.google.com/maps/place/Peace+of+Cake+Studio/@41.1776097,-8.6883815,17z/data=!3m1!4b1!4m5!3m4!1s0xd246f3eb8a76611:0x9f9cd620d26791e3!8m2!3d41.1776057!4d-8.6861928"
+                       target="_blank"></a>
+                </div>
+                <div id="copyright">
+                    &copy; 2010<script>document.write('-' + new Date().getFullYear());</script> Peace of Cake
+                </div>
+            </footer>
         </div>
+
+        <!-- TODO: Insert Google Analytics tracking code here! -->
     </body>
 </html>
