Do not open new tab/page when sending email

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                        href="https://www.instagram.com/_u/peaceofcakedesign/"
                        target="_blank"></a>
                     <a class="social-icon icon-mail"
-                       href="mailto:hello@peaceofcakestudio.com"
-                       target="_blank"></a>
+                       href="mailto:hello@peaceofcakestudio.com"></a>
                     <a class="social-icon icon-telephone"
-                       href="tel:223164793" ></a>
+                       href="tel:223164793"></a>
                     <a class="social-icon icon-location"
                        href="https://www.google.com/maps/place/Peace+of+Cake+Studio/@41.1776097,-8.6883815,17z/data=!3m1!4b1!4m5!3m4!1s0xd246f3eb8a76611:0x9f9cd620d26791e3!8m2!3d41.1776057!4d-8.6861928"
                        target="_blank"></a>
