Use correct HTML entity name for bullet character

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="style/studio.css">
         <link rel="stylesheet" href="style/fonts.css">
 
-        <title>Cake Design, Event Planning &amp; Party Shop &bullet; Peace of Cake Studio</title>
+        <title>Cake Design, Event Planning &amp; Party Shop &bull; Peace of Cake Studio</title>
     </head>
     <body>
         <div id="background"></div>
