--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head prefix="og: http://ogp.me/ns#">
         <meta charset="utf-8">
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -10,6 +10,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#c9fbff">
+
+        <meta property="og:url" content="https://peaceofcakestudio.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Cake Design, Event Planning &amp; Party Shop &bull; Peace of Cake Studio" />
+        <meta property="og:description"
+              content="It's Peace of Cake to make that special day even sweeter with our cakes, cookies, cake pops and other delicious homemade pastries." />
+        <meta property="og:image" content="https://peaceofcakestudio.com/images/open-graph-preview.jpg" />
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 
