--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
               content="It's Peace of Cake to make that special day even sweeter with our cakes, cookies, cake pops and other delicious homemade pastries." />
         <meta property="og:image" content="https://peaceofcakestudio.com/images/open-graph-preview.jpg" />
 
+        <meta name="twitter:card" content="summary_large_image">
+
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <link rel="stylesheet"
