Add twitter:creator meta tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <meta property="og:image" content="https://peaceofcakestudio.com/images/open-graph-preview.jpg" />
 
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:creator" content="@rfgamaral" />
 
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 
