Update social links to new versions

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <footer>
                 <div id="social-links">
                     <a class="social-icon icon-facebook"
-                       href="https://www.facebook.com/pg/itspeaceofcake/home/"
+                       href="https://www.facebook.com/itspeaceofcake/"
                        target="_blank"></a>
                     <a class="social-icon icon-instagram"
-                       href="https://www.instagram.com/_u/peaceofcakedesign/"
+                       href="https://www.instagram.com/peaceofcakestudio/"
                        target="_blank"></a>
                     <a class="social-icon icon-mail"
                        href="mailto:hello@peaceofcakestudio.com"></a>
