--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-101542130-1');
+            gtag('config', 'UA-101542130-1', {
+                'anonymize_ip': true
+            });
         </script>
 
     </body>
