Review website and open-graph title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <meta property="og:url" content="https://peaceofcakestudio.com/" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Cake Design, Event Planning &amp; Party Shop &bull; Peace of Cake Studio" />
+        <meta property="og:title" content="Party Shop, Cake Design &amp; Event Planning &bull; Peace of Cake Studio" />
         <meta property="og:description"
               content="It's Peace of Cake to make that special day even sweeter with our cakes, cookies, cake pops and other delicious homemade pastries." />
         <meta property="og:image" content="https://peaceofcakestudio.com/images/open-graph-preview.jpg" />
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="style/studio.css">
         <link rel="stylesheet" href="style/fonts.css">
 
-        <title>Cake Design, Event Planning &amp; Party Shop &bull; Peace of Cake Studio</title>
+        <title>Party Shop, Cake Design &amp; Event Planning &bull; Peace of Cake Studio</title>
     </head>
     <body>
         <div id="background"></div>
